--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,10 @@
-MONGO_URI=mongodb+srv://cooluser:web4350@learnly.86l9z.mongodb.net/learnly?retryWrites=true&w=majority&appName=Learnly
+# MONGO_URI=mongodb+srv://iiiaugmentdesigniiiAdmin:1qaz1qaz1qaz!QAZA@cluster0.1gq8ca1.mongodb.net/learnly?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://iiiaugmentdesigniiiAdmin:1qaz1qaz1qaz@cluster0.1gq8ca1.mongodb.net/learnly?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=supersecretkey123
 
-EMAIL_USER=ztb42z@gmail.com
-EMAIL_PASS=nkrz kyfg fyjb vgph
+EMAIL_USER=iiiaugmentdesigniii@gmail.com
+EMAIL_PASS=sbxh rrlc hddm mgvk
 
-CLIENT_URL=http://localhost:5173
+# CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://learnly-main.vercel.app
