--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 # VITE_BACKEND_URL=https://learnly-three.vercel.app
-VITE_BACKEND_URL=http://localhost:5050
+# VITE_BACKEND_URL=http://localhost:5050
+VITE_BACKEND_URL=/api
