Not Sure What I changed

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 # VITE_BACKEND_URL=https://learnly-three.vercel.app
 # VITE_BACKEND_URL=http://localhost:5050
-VITE_BACKEND_URL=/api
+# VITE_BACKEND_URL=/api
+VITE_BACKEND_URL=https://learnly-main.onrender.com
