--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
 		"build": "vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-		// "start": "vite"
-		"start": "node server.js"
+		"start": "vite"
+		
 	},
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
